<resources>
    <string name="app_name">FindBox</string>
    <string name="perfil">Perfil</string>
    <string name="adicionar_pedido">Adicionar Pedido</string>
    <string name="acompanhar_pedido">Acompanhar Pedido</string>
    <string name="como_funciona">Como Funciona</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="email">E-mail</string>
    <string name="senha">Senha</string>

    <string name="nome">Nome</string>
    <string name="cnpj">CPF/CNPJ</string>
    <string name="celular">Celular</string>
    <string name="codigoRastreio">Código Rastreio</string>
    <string name="apelidoProduto">Nome do Produto</string>

    <string name="usuario">Usuario</string>

    <string-array name="avatar">
        <item>Sexo</item>
        <item>___________________________________________</item>
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <string name="fragment_sobre">Sobre</string>
    <string name="fragment_perfil">Perfil</string>
</resources>
