<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente"
    tools:context=".CadastroCliente">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/avatar_i"
            app:civ_border_color="@color/branco"
            app:civ_border_width="0dp" />

    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/estilo_campos"
        android:hint="@string/nome"
        android:textColorHint="@color/branco"
        android:textColor="@color/branco"
        android:id="@+id/txtNome"/>

        <Spinner
            android:id="@+id/spinnerSexo"
            android:layout_below="@id/txtNome"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/estilo_campos"
            android:layout_width="340dp"
            android:layout_height="wrap_content" />

        <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/estilo_campos"
        android:hint="@string/email"
        android:textColorHint="@color/branco"
        android:textColor="@color/branco"
        android:id="@+id/txtEmail"
            android:layout_below="@id/spinnerSexo"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/estilo_campos"
        android:hint="@string/cnpj"
        android:textColorHint="@color/branco"
        android:textColor="@color/branco"
        android:id="@+id/txtCpfCnpj"
        android:layout_below="@id/txtEmail"
        android:inputType="number"
        />

    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/estilo_campos"
        android:hint="@string/celular"
        android:textColorHint="@color/branco"
        android:textColor="@color/branco"
        android:id="@+id/txtCelular"
        android:layout_below="@id/txtCpfCnpj"
        android:inputType="phone"
        />

    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/estilo_campos"
        android:hint="@string/senha"
        android:textColorHint="@color/branco"
        android:textColor="@color/branco"
        android:id="@+id/txtSenha"
        android:layout_below="@id/txtCelular"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Salvar"
        android:layout_marginLeft="90dp"
        android:background="@drawable/estilo_campos"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_below="@id/txtSenha"
        android:textColor="@color/branco" />

    </RelativeLayout>

    </ScrollView>
</FrameLayout>